<resources>
    <string name="text_go_to_SignUp">Dont you have an account?</string>
    <string name="todo">TODO</string>
    <string name="app_name">T-MUSIC</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_passwd">Password</string>
    <string name="text_confirmPasswd">Confirm Password</string>
    <string name="text_alreadyAccount">Already have an account?</string>
    <string name="text_signIn">Sign In</string>
    <string name="textSongName">Always Running</string>
    <string name="textSongAuthor">Arthur SONGS</string>
    <string name="textElapsedTime">1:57</string>
    <string name="textTimeLeft">2:30</string>
    <string name="text_alreadyExist">This account already exists</string>
    <string name="text_errorDB">Error with the database. Try again later</string>
    <string name="text_errorEmail">Invalid email or not entered</string>
    <string name="text_errorUser">The username can not contain blank spaces or be empty</string>
    <string name="text_errorPasswd">The password must be at least 8 characters</string>
    <string name="text_errorConfirmPasswd">This passwords didnt match</string>
    <string name="text_modify">Update</string>
    <string name="text_home">Go Home</string>
    <string name="text_modifyProfile">Modify Profile</string>
    <string name="social_network">Social Network</string>
    <string name="userNotExist">User doesnt exist</string>
    <string name="notImplemented">Not implemented</string>
    <string name="linkInstagram">https://www.instagram.com/rokeputoamo99/</string>
    <string name="notData">not Data</string>
</resources>