<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_play_button_color_gradient"
    tools:context=".PlayerActivity">

    <ImageButton
        android:id="@+id/buttonStartPause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_music_pause"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <ImageButton
        android:id="@+id/buttonNextSong"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/music_skip_next_button_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_music_skip_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.750"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/buttonPreviousSong"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/music_skip_previous_button_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_music_skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        app:tint="@color/white" />


    <ImageButton
        android:id="@+id/buttonLoop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/music_loop_button_background_false"
        android:src="@drawable/ic_music_loop_false"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.940"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9035" />

    <SeekBar
        android:id="@+id/seekBarMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:progress="50"
        android:max="100"
        android:thumbTint="@color/cyan"
        android:progressTint="@color/cyan"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textElapsedTime"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/textElapsedTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/textTimeLeft"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/textTimeLeft"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <VideoView
        android:id="@+id/videoSong"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/textSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSongName"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textSongAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSongAuthor"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/music_back_button_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_music_arrow_back"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>